Bug 961249 - Don't propagate component alpha layer flattening across force active layers and avoid unnecessary invalidations. r=roc

--HG--
extra : rebase_source : 60a08e1351c5ce1aa4ced54e7ef2fc18cb0e7590